--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,18 +8,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-
-        </activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".MainActivity"
+            android:windowSoftInputMode="stateVisible|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-    </application>
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+        </activity>
+        <activity android:name=".LoginActivity">
+
+        </activity>
+        <uses-permission android:name="android.permission.INTERNET"/>
+    </application>
 
     </manifest>
